Potential fix for slowdown on sequential days

--- a/ev-profiles.ipynb
+++ b/ev-profiles.ipynb
@@ -366,7 +366,7 @@
     "    # If the EV carries charging over days, keep the information\n",
     "    def reset(self):\n",
     "\n",
-    "        # Reset the current time\n",
+    "        # Reset the current trips\n",
     "        self.trips = []\n",
     "        self.split_trips = []\n",
     "\n",
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     " # Define an Aggregator class, that will aggregate the trips and EVs. Has the following parameters:\n",
@@ -843,6 +843,7 @@
     "        self.population = copy.deepcopy(self.assigned_evs)\n",
     "        self.trips = []\n",
     "        self.segments = []\n",
+    "        self.assigned_evs = []\n",
     "\n",
     "        for ev in self.population:\n",
     "            ev.reset()\n",
@@ -872,12 +873,13 @@
     "            print('Simulation days must be greater than 0. Setting to 1.')\n",
     "            self.simulation_cycles = 1\n",
     "\n",
-    "        # Run the simulation for the first day\n",
+    "        # Create the population\n",
+    "        self.create_evs(self.number_of_evs)\n",
     "\n",
     "        # Print the simulation progress\n",
     "        print('Simulating cycle {:003d} of {:003d}...'.format(self.simulation_step + 1, self.simulation_cycles))\n",
     "\n",
-    "        self.create_evs(self.number_of_evs)\n",
+    "        # Run the simulation for the first day\n",
     "        self.create_trips()\n",
     "        self.assign_trips()\n",
     "        self.get_simulation_results()\n",
@@ -1187,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "outputs": [
     {
      "name": "stdout",
@@ -1252,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "# Create a list of Charging Stations to use in the simulation\n",
@@ -1287,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "# Create a list of Charging Stations to use in the simulation\n",
@@ -1360,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "outputs": [],
    "source": [
     "# Create the profiles to use in the simulation\n",
@@ -1391,13 +1393,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulating cycle 001 of 007...\n",
       "Creating EVs...\n"
      ]
     },
@@ -1405,42 +1406,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 55230.36it/s]"
+      "100%|██████████| 1000/1000 [00:00<00:00, 52635.39it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assigning trips to EVs..."
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 999/1000 [00:13<00:00, 74.76it/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulating cycle 002 of 007...\n",
+      "Simulating cycle 001 of 001...\n",
       "Assigning trips to EVs...\n"
      ]
     },
@@ -1448,52 +1421,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 999/1000 [00:13<00:00, 73.66it/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulating cycle 003 of 007...\n",
-      "Assigning trips to EVs...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [01:56<00:00,  8.56it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulating cycle 004 of 007...\n",
-      "Assigning trips to EVs...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 16%|█▌        | 162/1000 [01:12<06:13,  2.24it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[44], line 7\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Create the simulation\u001B[39;00m\n\u001B[0;32m      3\u001B[0m aggregator \u001B[38;5;241m=\u001B[39m Aggregator(profiles\u001B[38;5;241m=\u001B[39mPROFILES, evs\u001B[38;5;241m=\u001B[39mEVs, n_evs\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1000\u001B[39m,\n\u001B[0;32m      4\u001B[0m                         avg_speed_short\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m60\u001B[39m, avg_speed_medium\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m80\u001B[39m, avg_speed_long\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m100\u001B[39m, avg_speed_variation\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1.0\u001B[39m,\n\u001B[0;32m      5\u001B[0m                         simulation_cycles\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m7\u001B[39m)\n\u001B[1;32m----> 7\u001B[0m \u001B[43maggregator\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun_simulation\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[1;32mIn[39], line 292\u001B[0m, in \u001B[0;36mAggregator.run_simulation\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    289\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcreate_trips()\n\u001B[0;32m    291\u001B[0m \u001B[38;5;66;03m# Assign the trips to the EVs\u001B[39;00m\n\u001B[1;32m--> 292\u001B[0m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43massign_trips\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    294\u001B[0m \u001B[38;5;66;03m# Get the simulation results\u001B[39;00m\n\u001B[0;32m    295\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mget_simulation_results()\n",
-      "Cell \u001B[1;32mIn[39], line 227\u001B[0m, in \u001B[0;36mAggregator.assign_trips\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    224\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39massigned_evs\u001B[38;5;241m.\u001B[39mappend(ev)\n\u001B[0;32m    226\u001B[0m \u001B[38;5;66;03m# Recalculate the probabilities\u001B[39;00m\n\u001B[1;32m--> 227\u001B[0m probabilities \u001B[38;5;241m=\u001B[39m [ev\u001B[38;5;241m.\u001B[39mbattery_size \u001B[38;5;241m/\u001B[39m \u001B[38;5;28msum\u001B[39m([ev\u001B[38;5;241m.\u001B[39mbattery_size \u001B[38;5;28;01mfor\u001B[39;00m ev \u001B[38;5;129;01min\u001B[39;00m population_copy]) \u001B[38;5;28;01mfor\u001B[39;00m ev \u001B[38;5;129;01min\u001B[39;00m population_copy]\n\u001B[0;32m    229\u001B[0m \u001B[38;5;66;03m# If the population is empty, break the loop\u001B[39;00m\n\u001B[0;32m    230\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(population_copy) \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n",
-      "Cell \u001B[1;32mIn[39], line 227\u001B[0m, in \u001B[0;36m<listcomp>\u001B[1;34m(.0)\u001B[0m\n\u001B[0;32m    224\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39massigned_evs\u001B[38;5;241m.\u001B[39mappend(ev)\n\u001B[0;32m    226\u001B[0m \u001B[38;5;66;03m# Recalculate the probabilities\u001B[39;00m\n\u001B[1;32m--> 227\u001B[0m probabilities \u001B[38;5;241m=\u001B[39m [ev\u001B[38;5;241m.\u001B[39mbattery_size \u001B[38;5;241m/\u001B[39m \u001B[38;5;28msum\u001B[39m([ev\u001B[38;5;241m.\u001B[39mbattery_size \u001B[38;5;28;01mfor\u001B[39;00m ev \u001B[38;5;129;01min\u001B[39;00m population_copy]) \u001B[38;5;28;01mfor\u001B[39;00m ev \u001B[38;5;129;01min\u001B[39;00m population_copy]\n\u001B[0;32m    229\u001B[0m \u001B[38;5;66;03m# If the population is empty, break the loop\u001B[39;00m\n\u001B[0;32m    230\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(population_copy) \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n",
-      "Cell \u001B[1;32mIn[39], line 227\u001B[0m, in \u001B[0;36m<listcomp>\u001B[1;34m(.0)\u001B[0m\n\u001B[0;32m    224\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39massigned_evs\u001B[38;5;241m.\u001B[39mappend(ev)\n\u001B[0;32m    226\u001B[0m \u001B[38;5;66;03m# Recalculate the probabilities\u001B[39;00m\n\u001B[1;32m--> 227\u001B[0m probabilities \u001B[38;5;241m=\u001B[39m [ev\u001B[38;5;241m.\u001B[39mbattery_size \u001B[38;5;241m/\u001B[39m \u001B[38;5;28msum\u001B[39m([\u001B[43mev\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbattery_size\u001B[49m \u001B[38;5;28;01mfor\u001B[39;00m ev \u001B[38;5;129;01min\u001B[39;00m population_copy]) \u001B[38;5;28;01mfor\u001B[39;00m ev \u001B[38;5;129;01min\u001B[39;00m population_copy]\n\u001B[0;32m    229\u001B[0m \u001B[38;5;66;03m# If the population is empty, break the loop\u001B[39;00m\n\u001B[0;32m    230\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(population_copy) \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+      "100%|█████████▉| 999/1000 [00:12<00:00, 80.33it/s] \n"
      ]
     }
    ],
@@ -1502,7 +1430,7 @@
     "\n",
     "aggregator = Aggregator(profiles=PROFILES, evs=EVs, n_evs=1000,\n",
     "                        avg_speed_short=60, avg_speed_medium=80, avg_speed_long=100, avg_speed_variation=1.0,\n",
-    "                        simulation_cycles=7)\n",
+    "                        simulation_cycles=1)\n",
     "\n",
     "aggregator.run_simulation()"
    ],
