--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -375,7 +375,7 @@
     "\n",
     "aggregator = Aggregator(profiles=PROFILES, evs=EVs, n_evs=20,\n",
     "                        avg_speed_short=60, avg_speed_medium=80, avg_speed_long=100, avg_speed_variation=1.0,\n",
-    "                        simulation_cycles=7, show_progress=True, trip_start_variation=0.1)\n",
+    "                        simulation_cycles=7, show_progress=True, trip_start_variation=0.1, initial_date=datetime.datetime(2023, 1, 1, 0, 0, 0))\n",
     "\n",
     "aggregator.run_sim()"
    ]
