--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -23,7 +23,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from itertools import cycle\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import datetime"
    ]
   },
   {
