--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-05-16T14:27:17.866254700Z",
-     "start_time": "2023-05-16T14:27:16.865913600Z"
-    },
-    "collapsed": true
+     "end_time": "2024-03-27T13:13:19.218484Z",
+     "start_time": "2024-03-27T13:13:18.342843Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -32,8 +32,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-16T14:27:23.560697200Z",
-     "start_time": "2023-05-16T14:27:23.546579900Z"
+     "end_time": "2024-03-27T13:13:22.645492Z",
+     "start_time": "2024-03-27T13:13:22.640459Z"
     }
    },
    "outputs": [
@@ -94,11 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-16T14:35:47.800585100Z",
-     "start_time": "2023-05-16T14:35:47.774005600Z"
+     "end_time": "2024-03-27T13:13:25.520065Z",
+     "start_time": "2024-03-27T13:13:25.516469Z"
     }
    },
    "outputs": [],
@@ -178,11 +178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-16T14:35:48.171982Z",
-     "start_time": "2023-05-16T14:35:48.156020900Z"
+     "end_time": "2024-03-27T13:13:25.989293Z",
+     "start_time": "2024-03-27T13:13:25.986499Z"
     }
    },
    "outputs": [],
